Fix word-break on links

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -792,7 +792,6 @@ b, strong {
 				}
 
 					#copy a {
-            word-break: break-all;
 						color: #337ab7;
 					}
 
